# wsl2-ipfwd

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build.ps1  update-deploy.ps1  wsl2ipfwd.iss  wsl2ipfwd.sln
.github/workflows/: release.yml
common/: app_paths.cpp  app_paths.h  config.cpp  config.h  protocol.h  svc_control.cpp  svc_control.h  version.h
gui-cs/: AppPaths.cs  ClearRulesDialog.cs  IpcClient.cs  LocalSettingsManager.cs  MainForm.Designer.cs  MainForm.cs  Models.cs  PortConfigDialog.cs  Program.cs  Protocol.cs  SettingsDialog.cs  app.manifest  gui-cs.csproj
notify/: CMakeLists.txt  notify.cpp
service/: CMakeLists.txt  firewall.cpp  firewall.h  ipc_server.cpp  ipc_server.h  main.cpp  net_util.cpp  net_util.h  port_forwarder.cpp  port_forwarder.h  service.cpp  service.h  update_checker.cpp  update_checker.h  update_url.h.in  upnp_manager.cpp  upnp_manager.h  wsl_monitor.cpp  wsl_monitor.h
test-update-server/: start.ps1
test-update-server/installer/: .gitignore
test-update-server/releases/: latest
updater/: CMakeLists.txt  updater.cpp
